# project-work

./: .gitignore  Problem.py  README.md  base_requirements.txt  pyproject.toml  s332100.py  tgp.ipynb
report/: lib.typ  report.typ  works.yaml
report/benches/: out.json
scripts/: optuna_ga.py
src/tgp/: __init__.py  __main__.py  types.py
src/tgp/cli/: check_range.py  utils.py
src/tgp/ga/: ga.py
src/tgp/problem/: problem.py
src/tgp/solution/: baseline.py  solution.py
src/tgp/solution/ga/: common.py  crossovers.py  ga.py  individual.py  lns.py  mutations.py  presets.py
tests/: test_baseline.py  test_ga.py  validate.py
