[project]
name = "tgp"
version = "0.1.0"
description = "A variation of Contrained Vehicle Routing Problem"
readme = "README.md"
authors = [{ name = "eduard", email = "occhipinti.eduard@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numba>=0.63.1",
    "numba-progress>=1.1.3",
    "numpy>=2.3.5",
    "pip>=25.3",
    "rich>=14.2.0",
]

[project.optional-dependencies]
gpu = ["numba-cuda[cu12]>=0.21.2", "nx-cugraph-cu12>=25.10.0"]
intel = ["intel-cmplr-lib-rt>=2025.3.1"]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[project.scripts]
tgp = "tgp.__main__:main"

[tool.ruff]
lint.extend-select = ["I"]
